# distributed-systems

c#/: Program.cs  c#.csproj  c#.sln
c#/Benchmarks/: BenchmarkPearson.cs  BenchmarkReader.cs
c#/Correlation/: ICorrelation.cs  Pearson.cs
c#/Data/: Data.cs  DataArray.cs  DataDictionary.cs
c#/Element/: BaseElement.cs  Column.cs  Row.cs
c#/Reader/CSV/: BaseElement.cs  Column.cs  CsvDataArray.cs  CsvDataDictionary.cs  CsvReader.cs  Row.cs
c#/Reader/Interfaces/: IReadableFile.cs
c++/: .gitignore  CMakeLists.txt  c++.cpp  c++.h  main.cpp
c++/benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark_reader.cpp
c++/csv_reader_lib/: CMakeLists.txt  csv_reader.cpp  csv_reader.h
c++/data_array_lib/: CMakeLists.txt  DataArray.cpp  DataArray.h
c++/pearson_lib/: CMakeLists.txt  pearson.cpp  pearson.h
data/: Salary.csv  SalaryFloat.csv
